<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpDonaturFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/img_bg_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="Kembali"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/name_product"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:cardUseCompatPadding="true"
            android:paddingBottom="@dimen/_100sdp"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_marginBottom="@dimen/card_margin_end"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_big"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@color/darkerOrange"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:src="@drawable/add_user_profil"
                    app:civ_border_color="@color/lighGray"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pilih gambar profil"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_nameReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:background="@android:color/transparent"
                    android:hint="@string/nomor_hp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_nama">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_phoneReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_emailReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_passwordReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_login_button"
                    android:text="@string/signup"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_big"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.Holo.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_phone"
                     />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/margin_big"
                    android:visibility="gone"
                    android:text="@string/sudah_memiliki_akun"
                    android:textColor="@color/darkerOrange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>